Update portal header and color scheme

--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -36,17 +36,19 @@
           <div class="as__section_content">
             <div class="pa_banner_img">
               <img
-                src="/assets/images/PORTAL/banner_home_1.png"
+                src="/assets/images/PORTAL/banner_portal_home_1.png"
                 alt="Bienvenida"
               />
             </div>
             <div class="pa_banner_content">
               <h2>{Nombre}</h2>
-              <h3>¡Bienvenido a nuestro nuevo portal transaccional!</h3>
+              <h3>
+                ¡Bienvenido a ASULADO, tu aliado en beneficios garantizados!
+              </h3>
               <p>
-                Este es un lugar exclusivo para nuestros pensionados ASULADO.
-                Aquí podrás realizar tus solicitudes en el momento que lo desees
-                y de forma inmediata. 
+                Este es un lugar exclusivo para nuestros clientes ASULADO. Aquí
+                podrás realizar tus solicitudes en el momento que lo desees y de
+                forma inmediata. 
               </p>
             </div>
           </div>
@@ -73,8 +75,8 @@
                 <select id="docs_tabs">
                   <option value="0">Certificados y otros documentos</option>
                   <option value="1">Actualización de datos</option>
-                  <option value="2">Novedades de Nómina</option>
-                  <option value="3">Seguimiento a trámites</option>
+                  <option value="2">Novedades de nómina</option>
+                  <option value="3">Seguimiento a solicitudes</option>
                 </select>
               </div>
 
@@ -109,7 +111,7 @@
                     data-hash="novedades"
                   >
                     <i class="fa-light fa-file-invoice-dollar"></i>
-                    Novedades de Nómina
+                    Novedades de nómina
                   </a>
                 </li>
                 <li>
@@ -120,7 +122,7 @@
                     data-hash="seguimiento"
                   >
                     <i class="fa-light fa-arrow-progress"></i>
-                    Seguimiento a trámites
+                    Seguimiento a solicitudes
                   </a>
                 </li>
               </ul>
@@ -136,7 +138,7 @@
 
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "link":"#", "ico": "file-lines",  "title":"Certificado de Pensión", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
+                    locals='{ "link":"#", "ico": "file-lines",  "title":"Certificado de pensión", "image":"tmp_servicio.png", "content":"Documento que certifica el ingreso de una mesada pensional por parte de ASULADO. Reúne información sobre el tipo de pensión, valor de la mesada pensional y la fecha desde cuándo formas parte de nuestra Familia."}'
                   ></include>
 
                   <include
@@ -146,7 +148,7 @@
 
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "link":"#", "ico": "money-check-pen",  "title":"Certificado de Ingresos y Retenciones", "image":"tmp_servicio.png", "content":"Documento que informa los ingresos y las retenciones que se realizaron durante un periodo de tiempo determinado. Te servirá para que realices tu declaración de renta y otros trámites."}'
+                    locals='{ "link":"#", "ico": "money-check-pen",  "title":"Certificado de ingresos y retenciones", "image":"tmp_servicio.png", "content":"Documento que informa los ingresos y las retenciones que se realizaron durante un periodo de tiempo determinado. Te servirá para que realices tu declaración de renta y otros trámites."}'
                   ></include>
                 </ul>
               </div>
