Fix typos in file names and titles

--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -143,7 +143,7 @@
 
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "link":"#", "ico": "file-invoice-dollar",  "title":"Copia de poliza", "image":"tmp_servicio.png", "content":"Documento que ilustra los componentes de tu póliza de Renta Vitalicia, tus deberes y derechos como cliente y nuestras obligaciones y derechos como Aseguradora de Vida."}'
+                    locals='{ "link":"#", "ico": "file-invoice-dollar",  "title":"Copia de póliza", "image":"tmp_servicio.png", "content":"Documento que ilustra los componentes de tu póliza de Renta Vitalicia, tus deberes y derechos como cliente y nuestras obligaciones y derechos como Aseguradora de Vida."}'
                   ></include>
 
                   <include
@@ -169,12 +169,12 @@
                 <ul>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "link":"#", "ico": "file-invoice",  "title":"Redistribuciones de Mesada", "image":"tmp_servicio.png", "content":"Documento que reúne información sobre tu mesada pensional, incluyendo: valor mensual de la mesada, fecha y descuentos realizados."}'
+                    locals='{ "link":"#", "ico": "file-invoice",  "title":"Redistribuciones de mesada", "image":"tmp_servicio.png", "content":"Documento que reúne información sobre tu mesada pensional, incluyendo: valor mensual de la mesada, fecha y descuentos realizados."}'
                   ></include>
 
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "link":"#", "ico": "file-lines",  "title":"Certificado de Estudio", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
+                    locals='{ "link":"#", "ico": "file-lines",  "title":"Certificado de estudio", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
                   ></include>
                   <include
                     src="PORTAL/p_home_servicio.html"
@@ -190,7 +190,7 @@
                   ></include>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "link":"#", "ico": "file-lines",  "title":"Novedades de Cuenta Financiera", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
+                    locals='{ "link":"#", "ico": "file-lines",  "title":"Novedades de cuenta financiera", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
                   ></include>
                   <include
                     src="PORTAL/p_home_servicio.html"
@@ -207,7 +207,7 @@
 
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "link":"#", "ico": "file-lines",  "title":"Consulta Novedades", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
+                    locals='{ "link":"#", "ico": "file-lines",  "title":"Consulta novedades", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
                   ></include>
                 </ul>
               </div>
