Update password security message

--- a/src/pages/PORTAL/contrasena.html
+++ b/src/pages/PORTAL/contrasena.html
@@ -53,8 +53,8 @@
                 ></path>
               </svg>
               <span
-                >¡Recuerda! Tu seguridad es nuestra prioridad y por eso te
-                recomendamos actualizar tu contraseña
+                >¡Recuerda! Tu seguridad es nuestra prioridad, es momento de
+                actualizar tu contraseña
               </span>
             </div>
             <form
