Update CSS and HTML for login page

--- a/src/pages/PORTAL/login.html
+++ b/src/pages/PORTAL/login.html
@@ -468,15 +468,22 @@
                                 colspan="2"
                               >
                                 <label class="label">
-                                  <span class="label-text">Email</span>
+                                  <span class="label-text"
+                                    >Número de identificación</span
+                                  >
                                 </label>
                                 <input
                                   class="w-full input input-bordered input-primary"
                                   name="Usuario"
-                                  placeholder="Correo electronico"
+                                  placeholder="Número de identificación"
                                   required="true"
                                   type="text"
                                 />
+                                <div class="label">
+                                  <span class="label-text-alt"
+                                    >No utilices espacios, puntos ni comas</span
+                                  >
+                                </div>
                               </td>
                               <td
                                 class="dataCol first form-control"
