--- a/src/pages/PORTAL/interna.html
+++ b/src/pages/PORTAL/interna.html
@@ -40,12 +40,12 @@
           <ul>
             <include
               src="PORTAL/p_link_servicio.html"
-              locals='{ "cls":"active", "ico": "file-invoice",  "title":"Consultas PQRS", "content":"Documento que reúne información sobre tu mesada pensional, incluyendo: valor mensual de la mesada, fecha y descuentos realizados."}'
+              locals='{ link:"#", "cls":"active", "ico": "file-invoice",  "title":"Consultas PQRS", "content":"Documento que reúne información sobre tu mesada pensional, incluyendo: valor mensual de la mesada, fecha y descuentos realizados."}'
             ></include>
 
             <include
               src="PORTAL/p_link_servicio.html"
-              locals='{ "cls":"", "ico": "file-lines",  "title":"Consulta Novedades", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
+              locals='{  link:"#", "cls":"", "ico": "file-lines",  "title":"Consulta Novedades", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
             ></include>
           </ul>
         </div>
