--- a/src/pages/PORTAL/pqrs_2_consultar.html
+++ b/src/pages/PORTAL/pqrs_2_consultar.html
@@ -67,7 +67,7 @@
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header">
-            <h3>¿Qué tipo de PQRS puedes realizar?</h3>
+            <h3>Aquí puedes ver los casos que has creado</h3>
           </div>
           <div class="pa_co_content">
             <div class="overflow-x-auto">
