Update dropdown styles and fix links in PORTAL pages

--- a/src/pages/PORTAL/2_certificados_ingreso.html
+++ b/src/pages/PORTAL/2_certificados_ingreso.html
@@ -33,8 +33,8 @@
       src="PORTAL/p_top.html"
       locals='{
         "cls":"",
-        "ico":"file-invoice",
-        "title":"Colilla de pagos",
+        "ico":"money-check-pen", 
+        "title":"Certificado de ingresos y retenciones",
         "image":"tmp_header.png",
         "content":"Qui nulla non et proident fugiat sit nisi minim. Anim laborum ex fugiat eiusmod. Et reprehenderit veniam laboris fugiat dolore laboris ipsum amet. Nostrud anim elit consequat sunt ut laboris culpa."
      }'
@@ -51,7 +51,7 @@
 
             <include
               src="PORTAL/p_link_servicio.html"
-              locals='{ "cls":"active", "link":"/PORTAL/2_certificados_pension.html", "ico": "file-lines",  "title":"Certificado de pensión", "image":"tmp_servicio.png", "content":"Documento que certifica el ingreso de una mesada pensional por parte de ASULADO. Reúne información sobre el tipo de pensión, valor de la mesada pensional y la fecha desde cuándo formas parte de nuestra Familia."}'
+              locals='{ "cls":"", "link":"/PORTAL/2_certificados_pension.html", "ico": "file-lines",  "title":"Certificado de pensión", "image":"tmp_servicio.png", "content":"Documento que certifica el ingreso de una mesada pensional por parte de ASULADO. Reúne información sobre el tipo de pensión, valor de la mesada pensional y la fecha desde cuándo formas parte de nuestra Familia."}'
             ></include>
 
             <include
@@ -61,7 +61,7 @@
 
             <include
               src="PORTAL/p_link_servicio.html"
-              locals='{"cls":"", "link":"/PORTAL/2_certificados_pension.html", "ico": "money-check-pen",  "title":"Certificado de ingresos y retenciones", "image":"tmp_servicio.png", "content":"Documento que informa los ingresos y las retenciones que se realizaron durante un periodo de tiempo determinado. Te servirá para que realices tu declaración de renta y otros trámites."}'
+              locals='{"cls":"active", "link":"/PORTAL/2_certificados_pension.html", "ico": "money-check-pen",  "title":"Certificado de ingresos y retenciones", "image":"tmp_servicio.png", "content":"Documento que informa los ingresos y las retenciones que se realizaron durante un periodo de tiempo determinado. Te servirá para que realices tu declaración de renta y otros trámites."}'
             ></include>
           </ul>
         </div>
@@ -74,7 +74,7 @@
           <div class="pa_co_header"></div>
           <div class="pa_co_content">
             <include
-              src="PORTAL/2_certificados/1_certificados_colilla.html"
+              src="PORTAL/2_certificados/4_certificados_ingreso.html"
             ></include>
           </div>
           <div class="pa_co_footer prose"></div>
