--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -148,7 +148,7 @@
 
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "link":"#", "ico": "money-check-pen",  "title":"Certificado de ingresos y retenciones", "image":"tmp_servicio.png", "content":"Documento que informa los ingresos y las retenciones que se realizaron durante un periodo de tiempo determinado. Te servirá para que realices tu declaración de renta y otros trámites."}'
+                    locals='{ "link":"/PORTAL/2_certificados_ingreso.html", "ico": "money-check-pen",  "title":"Certificado de ingresos y retenciones", "image":"tmp_servicio.png", "content":"Documento que informa los ingresos y las retenciones que se realizaron durante un periodo de tiempo determinado. Te servirá para que realices tu declaración de renta y otros trámites."}'
                   ></include>
                 </ul>
               </div>
